# security-headers-auditor

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  security-headers-auditor-threat-model.md
.codex/skills/security-headers-auditor/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: BRAND_IDENTITY.md  CITATION_MANIFEST.md  CONTINUOUS_ASSURANCE.md  DEPENDENCY_AND_LICENSE_REVIEW_V0.5.md  DEPENDENCY_AND_LICENSE_REVIEW_V0.6.1.md  DEPENDENCY_AND_LICENSE_REVIEW_V0.6.md  DEPENDENCY_AND_LICENSE_REVIEW_V0.7.md  DEPENDENCY_AND_LICENSE_REVIEW_V0.8.md  DEPENDENCY_AND_LICENSE_REVIEW_V0.9.md  DIFFERENTIATION_BRIEF.md  FRAMEWORK_ALIGNMENT_POLICY.md  METHODOLOGY.md  PRIVACY_ACCESSIBILITY_AUTHORIZATION.md  PRODUCT_POSITIONING.md  QA_V0.5_WORKSPACE.md  RELEASE_GATE_V0.3.md  RELEASE_GATE_V0.4.md  RELEASE_GATE_V0.5.md  RELEASE_GATE_V0.6.1.md  RELEASE_GATE_V0.6.md  RELEASE_GATE_V0.7.md  RELEASE_GATE_V0.8.md  RELEASE_GATE_V0.9.md  REPOSITORY_POLISH.md  RESPONSIBLE_USE.md  ROADMAP.md  V0.3_METHODOLOGY_SPECIFICATION.md  V0.4_METHODOLOGY_SPECIFICATION.md  V0.5_METHODOLOGY_SPECIFICATION.md  V0.5_WORKSPACE_TUTORIAL.md  V0.6_METHODOLOGY_SPECIFICATION.md  V0.7_METHODOLOGY_SPECIFICATION.md  V0.8_METHODOLOGY_SPECIFICATION.md  V0.9_WORKSPACE_AUDIT_HISTORY.md
docs/adr/: 0001-loopback-workspace-runtime.md  0002-workspace-persistence-and-migrations.md  0003-framework-evidence-taxonomy.md  0004-tool-and-methodology-versioning.md  0005-controlled-route-comparison.md  0006-csp-parser-and-methodology-version.md  0007-controlled-route-assurance.md  0008-portable-review-evidence-capsule.md  0009-bounded-workspace-audit-history.md
docs/images/: README.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/schemas/: assurance-baseline.schema.json  audit-policy.schema.json  evidence-capsule-manifest.schema.json  profile-definitions.schema.json  route-assurance-baseline.schema.json  route-comparison.schema.json
examples/: audit-policy.json  ci-fixture-baseline.json  ci-fixture-policy.json  route-comparison.json  sample-report.md  targets.txt
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
src/security_headers_auditor/: __init__.py  assurance.py  assurance_controls.py  auditor.py  catalog.py  ci_report.py  cli.py  compliance.py  csp.py  evidence_capsule.py  profile_export.py  profiles.py  report.py  route_comparison.py
tests/: browser_qa_server.py  fixture_server.py  test_assurance.py  test_auditor.py  test_csp.py  test_evidence_capsule.py  test_route_comparison.py  test_workspace.py
tests/fixtures/: api_headers.json  app_headers.json  assurance_broken_headers.json  assurance_ready_headers.json  brochure_headers.json  hostile_headers.json
tests/schemas/: README.md
(+19 files in other folders)
