[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-headers-auditor"
version = "0.4.0"
description = "Context-aware HTTP security headers auditor with policy-as-code assurance and regression-focused CI outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Vasileios Tsalikidis" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
  "Intended Audience :: Information Technology",
]

[project.scripts]
security-headers-auditor = "security_headers_auditor.cli:main"

[tool.setuptools.package-data]
security_headers_auditor = ["data/*.json"]
