[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-headers-auditor"
version = "0.8.0"
description = "Context-aware HTTP security headers auditor with policy-as-code assurance and regression-focused CI outputs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
  { name = "Vasileios Tsalikidis" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
  "Intended Audience :: Information Technology",
]

[project.scripts]
security-headers-auditor = "security_headers_auditor.cli:main"

[project.optional-dependencies]
test = [
  "jsonschema>=4.23,<5",
]

[tool.setuptools.package-data]
security_headers_auditor = [
  "data/*.json",
  "workspace_static/*.html",
  "workspace_static/assets/*.css",
  "workspace_static/assets/*.js",
]

[tool.setuptools.exclude-package-data]
security_headers_auditor = [".DS_Store"]
